src/components/checkbox/checkbox.scss
@import 'colors';
@import 'input-field';
@import 'mixins';

.ui-checkbox {
  padding-top: 9px;

  .common-input__field,
  .common-input__label {
    display: inline-block;
    vertical-align: top;
  }
}

.ui-checkbox__input.common-input__input {
  cursor: pointer;
  height: 15px;
  opacity: 0;
  position: absolute;
  vertical-align: middle;
  width: 15px;

  ~ svg {
    .checkbox-outline {
      rx: 2;
    }

    .checkbox-fill {
      ry: 1;
    }
  }

  &:focus + svg {
    box-shadow: 0 0 6px rgba(25, 99, 246, 0.6);
    @include transition(border linear 0.1s, box-shadow linear 0.1s);

    .checkbox-outline {
      fill: $input-active-border-color;
    }
  }

  &:hover + svg .checkbox-outline {
    fill: $input-active-border-color;
  }

  &:checked + svg .checkbox-check {
    fill: $grey-dark;
  }

  &[disabled] + svg {
    .checkbox-outline {
      fill: $grey;
    }

    .checkbox-fill {
      fill: $grey-light;
    }

    .checkbox-check {
      fill: $grey;
    }
  }
}

